# vas3k_secret_santa

./: .gitignore  .pre-commit-config.yaml  BackupDockerfile  Dockerfile  LICENSE.txt  README.md  docker-compose.yml  pyproject.toml  zstddict
sesanta/: serving_status.py  settings.py
sesanta/bot/: __init__.py  __main__.py
sesanta/bot/filters/: __init__.py  authenticated.py  complete.py  eligible.py  serving_status.py
sesanta/bot/handlers/: __init__.py  authenticate.py  complete.py  delete.py  fill_address.py  get_chats.py  select_countries.py  set_delivery_status.py  set_location.py  start.py  understood_select_countries.py  understood_set_location.py  wait_for_drawing.py
sesanta/chats/: gunicorn.py  web.py
sesanta/chats/templates/: chat.html  error.html
sesanta/db/: client.py
sesanta/db/collections/: base.py  messages.py  users.py
sesanta/db/schemas/: base.py  messages.py  users.py
sesanta/services/: message_creator.py  user_creator.py  user_deleter.py  user_eligibility_setter.py  user_fill_address.py  user_getter.py  user_is_eligible.py  user_set_completeness.py
sesanta/services/club_loader/: __init__.py
sesanta/services/country_chooser/: __init__.py  club_countries.py  club_country_popularity.hjson  groups.hjson
sesanta/utils/: chat_auth.py  emoji.py  plural.py
tests/utils/: test_chat_auth.py  test_plural.py
utils/: announce_santas.py  basic.py  draw_graph.py  export_users.py  import_cycle.py  parse_countries.py  repl.py  repl_import.py  send_message.py  train_dictionary.py
utils/find_cycle/: annealing.py  graph.py  main.py  search.py  user.py
