[tool.poetry]
name = "sesanta"
version = "0.1.0"
description = ""
authors = ["Oskar Sharipov <oskargit@riseup.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.1"
motor = "^3.3.1"
pydantic-settings = "^2.0.3"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
ruff = "^0.1.1"
pyright = "^1.1.332"
pre-commit = "^3.5.0"
pytest = "^7.4.2"
isort = "^5.12.0"


[tool.ruff]
select = [
	"E",
	"F",
	"C90",
	"I",
	"N",
	"YTT",
	"ASYNC",
	"S",
	"COM",
	"C4",
	"EM",
	"ISC",
	"ICN",
	"G",
	"INP",
	"PIE",
	"RET",
	"SIM",
	"TID",
	"PTH",
	"TD",
	"PL",
	"RUF",
	"UP",
	"DTZ",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
