[tool.poetry]
name = "sesanta"
version = "0.1.0"
description = ""
authors = ["Oskar Sharipov <oskargit@riseup.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.1"
motor = "^3.3.1"
pydantic-settings = "^2.0.3"
aiohttp = "^3.8.6"
aiolimiter = "^1.1.0"
aiodns = "^3.1.1"
aiorun = "^2023.7.2"
click = "^8.1.7"
hjson = "^3.1.0"
asyncclick = "^8.1.3.4"
anyio = "^3.7.1"
fastapi = "^0.104.1"
jinja2 = "^3.1.2"
pynacl = "^1.5.0"
uvicorn = "^0.24.0.post1"
python-multipart = "^0.0.6"
zstandard = "^0.22.0"
gunicorn = "^21.2.0"
graphviz = "^0.20.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.1"
pyright = "^1.1.332"
pre-commit = "^3.5.0"
pytest = "^7.4.2"
isort = "^5.12.0"
beautifulsoup4 = "^4.12.2"
time-machine = "^2.13.0"


[tool.isort]
profile = "black"


[tool.ruff]
line-length = 90
select = [
	"E",
	"F",
	"C90",
	"I",
	"N",
	"YTT",
	"ASYNC",
	"S",
	"C4",
	"EM",
	"ICN",
	"G",
	"INP",
	"PIE",
	"RET",
	"SIM",
	"TID",
	"PTH",
	"TD",
	"PL",
	"RUF",
	"UP",
	"DTZ",
]
ignore = [
	"RUF001",
	"S311",
]
[tool.ruff.per-file-ignores]
"test_*.py" = ["S101", "PLR2004"]


[tool.pytest.ini_options]
testpaths = [
	"tests",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
